	  the items over max number are located in more panel.
	  The APIs are added for this feature.(elm_toolbar_more_item_get, elm_toolbar_items_max_set/get)

2012-05-22 Carsten Haitzler (The Rasterman)

	* Add skeleton for handling remote commands access controls.

2012-05-23  Tae-Hwan Kim (Bluezery)

	* Map: Add elm_map_overlays_get & elm_map_overlay_visible_get functions.

2012-05-24 Michal Pakula vel Rutka

	* Add ability to use cnp helper code on non-elm widget objects by
	  falling back to ecore-evas to get the window id.

2012-05-24 Tae-Hwan Kim (Bluezery)

	* Add "loaded" signal for elm_map.

2012-05-25 Rob Bradford

	* Refactor X11 specific code to use ecore_evas_*_window_get functions
	so that the driver for the Ecore_Evas will be checked.

2012-05-28 Mike Blumenkrantz

	* Fix sizing calc error in list item homogenizing

2012-05-28 Carsten Haitzler (The Rasterman)

	* Made elm_object_focus_set() fall back to evbas_object_focus_set()
	  if the object is not an elm widget.

2012-05-29 Mike Blumenkrantz

        * Prepending items to a genlist no longer causes the selected item to
          scroll out of the viewport
        * Collapsing tree items in genlist now animate properly

2012-05-29 Rob Bradford

	* Move X related window items into their own substruct of
	_Elm_Win_Smart_Data to allow grouping based on engine.

2012-05-30 Mike Blumenkrantz

        * Fix even/odd signals for genlist items

2012-05-30 Thiep Ha

       * Entry: Add 3 APIs which are elm_entry_text_style_user_push/pop/peek
       and test functions for these APIs.

2012-05-31 WooHyun Jung

       * child_can_focus should be EINA_FALSE only when all children in the object
         tree are not focusable. Before this fix, it was EINA_FALSE when all sub
         objects were not focusable. (i.e. didn't check whole object tree)

2012-06-01 Mike Blumenkrantz

        * Re-setting the current mirrored mode state no longer causes a full recalc