@@ -1246,6 +1246,18 @@ EAPI Eina_Bool             elm_win_socket_listen(Evas_Object *obj, const char *s
  */
 EAPI Ecore_X_Window elm_win_xwindow_get(const Evas_Object *obj);
 
+/* Wayland specific call - returns NULL on non-Wayland engines */
+/**
+ * Get the Ecore_Wl_Window of and Evas_Object
+ *
+ * @param obj the object
+ *
+ * @return The Ecore_Wl_Window of @p obj
+ *
+ * @ingroup Win
+ */
+EAPI Ecore_Wl_Window *elm_win_wl_window_get(const Evas_Object *obj);
+
 /**
  * @}
  */
